[tool.poetry]
name = "requestrepo"
version = "0.1.0"
description = "Analyze HTTP and DNS requests and create custom DNS records for your subdomain"
authors = ["Dragos Albastroiu <adragos@protonmail.com>"]
packages = [
    { include = "backend" },
    { include = "dns" }
]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.0"
dnspython = "^2.4.0"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
redis = "^5.2.1"
gunicorn = "^23.0.0"
pyjwt = "^2.10.1"
simple-acme-dns = "^3.2.0"
certifi = "^2024.12.14"
fastapi-utils = "^0.8.0"
typing-inspect = "^0.9.0"
httpx = "^0.28.1"
dnslib = "^0.9.25"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.25.2"
ruff = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = []
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = "." 