[package]
name = "requestrepo"
version = "0.1.0"
edition = "2021"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]
description = "RequestRepo backend rewritten in Rust"

[dependencies]
# Async runtime
tokio = { version = "1.36.0", features = ["full"] }

# Web framework
axum = { version = "0.7.4", features = ["ws", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors", "trace"] }
hyper = { version = "1.1.0", features = ["full"] }
http = "1.0.0"

# DNS server
trust-dns-server = "0.23.2"
trust-dns-proto = "0.23.2"

# SMTP server
async-smtp = "0.9.0"

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# JWT
jsonwebtoken = "9.2.0"

# Compression
flate2 = "1.0.28"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Utilities
rand = "0.8.5"
chrono = { version = "0.4.35", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
base64 = "0.21.7"
dotenv = "0.15.0"
regex = "1.10.3"
lazy_static = "1.4.0"
thiserror = "1.0.57"
anyhow = "1.0.79"
async-trait = "0.1.77"

[dev-dependencies]
mockall = "0.12.1"
tempfile = "3.10.1"
